tests/rosetta/out/Fortran/copy-a-string-2.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program copy_a_string_2
  implicit none
  character(len=100) :: creature
  integer, dimension(1) :: pointer
  creature = 'shark'
  pointer = (/creature/)
  print *, 'creature = ' // trim(creature)
  print *, 'pointer = 0'
  print *, '*pointer = ' // pointer(((0)+1))
  pointer(((0)+1)) = 'jellyfish'
  creature = pointer(((0)+1))
  print *, '*pointer = ' // pointer(((0)+1))
  print *, 'creature = ' // trim(creature)
end program copy_a_string_2
